project/tests/in_progress/for_main/good/algorithms/factorial/fact02_while_glob_i32_post_cmpd.c
#include <stdio.h>

int n = 5;

int main() {
    int f = 1;
    while(n > 1) {
        f *= n--;
    }
    printf("%d\n", f);
    f;

    return 0;
}
